# datagouv_client

./: .gitignore  CHANGELOG.md  README.md  bumpr.rc  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.py  update_version.py
.circleci/: config.yml
datagouv/: __init__.py  _cli_entry.py  _cli_shim.py  base_object.py  cli.py  client.py  config.py  dataset.py  organization.py  resource.py  topic.py
datagouv/api/: api.py  client.py  dataset.py  organization.py  resource.py  topic.py
datagouv/commands/: dataset.py  organization.py  resource.py  topic.py  utils.py
datagouv/utils/: base_object.py
tests/: api_metadata.json  conftest.py  dataset_metadata.json  elements_metadata.json  organization_metadata.json  resource_metadata_api1.json  resource_metadata_api2.json  tabular_api_data.json  tabular_api_profile.json  test_api.py  test_base_object.py  test_client.py  test_dataset.py  test_organization.py  test_resource.py  test_topic.py  topic_metadata.json
