[project]
name = "datagouv_client"
dynamic = ["version"]
description = "Wrapper for the data.gouv.fr API"
authors = [{ name = "Etalab", email = "opendatateam@data.gouv.fr" }]
dependencies = [
    "httpx>=0.28.1,<1",
    "tenacity>=9.0.0,<10",
]
requires-python = ">=3.10,<3.14"
license = "MIT"
readme = "README.md"
keywords = ["api", "wrapper", "datagouv"]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1",
    "pytest-httpx>=0.35.0,<1",
    "ruff>=0.11.2",
]

[project.urls]
Source = "https://github.com/datagouv/datagouv_client"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
csv_detective = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
lint = { extend-select = ["I"] } # ["I"] is to also sort imports with an isort rule
line-length = 100
